tests/fail/fail-func4.mc
void foo() {}

void bar() {}

void print() {} /* Should not be able to define print */

void baz() {}

int main()
{
  return 0;
}
